# advent-of-code

./: .gitignore  .gitmodules  Cargo.toml  generate.py  get.py  scaffold.py
2017/: .clang-format  build.sh
2017/src/: day1.c  day1.s  day2.s  main.c  main.h
2019/: Cargo.toml
2019/data/: day1.txt  day18.txt  day22.txt  day23.txt
2019/intcode/: day8.asm  fib.asm
2019/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.js  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  (+2 more)
2020/: .gitignore  generate.py
2021/: .gitignore  Cargo.toml  get.py
2021/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
2022/: .gitignore  run.js
2023/: Cargo.toml  run
2023/data/: day20.test  day8.test
2023/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20-graph.html  day20-graph.js  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25-graph.html  day25-graph.js  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
src/: day1.rs  day10.rs  day11.rs  day13.rs  day14.rs  day15.rs  day16.rs  day18.rs  day18data.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  main.rs
(+52 files in other folders)
