[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Jeremy Burns <j@jaburns.net>"]
edition = "2018"

[dependencies]
glam = { version = "0.20.2", features = ["glam-assert"] }
hashbrown = "0.11.2"
modinverse = "0.1.1"
num = "0.3.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
pathfinding = "3.0.5"
regex = "1.4.2"
stats_alloc = "0.1.8"

[profile.release]
debug = true
