[package]
name = "adventofcode2023"
version = "0.1.0"
authors = ["Jeremy Burns <j@jaburns.net>"]
edition = "2018"

[dependencies]
ahash = { version = "0.8.3", default-features = false }
arrayvec = "0.7.4"
glam = "0.24.2"
itertools = "0.12.0"
stats_alloc = "0.1.8"
nix = { version = "0.27.1", features = ["time"] }
rayon = "1.8.0"
derive_more = "0.99.17"

[profile.release]
# lto = true
debug = true
